Support JSON schema for decaton processor properties used in central dogma (#263)
* NO-ISSUE Support JSON schema for decaton processor properties

* NO-ISSUE Feedback

* NO-ISSUE oops

* NO-ISSUE drop unnecessary GH action(setup-gradle)

* NO-ISSUE Drop code to contain decaton version because jsonschema path contains it

* NO-ISSUE inline comment, style

* NO-ISSUE more precise version place holder

* NO-ISSUE bump up + delete unrelated change